--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,20 +41,32 @@ html {
 
 .buttons {
 
-	background:none;
 	z-index: 10;
 
-	width: fit-content;
+	width: 100vw;
+
+	background-color:#1D1D1D;
 
 	height:5vh;
 	
 	margin-top: 0;
-	margin-left: 5vw;
+
 	position: fixed;
 
 	
 }
 
+.button_margin {
+
+	z-index: 11;
+	width: 100vw;
+	height:5vh;
+	margin-top: 0;
+
+	position: fixed;
+
+	margin-left: 5vw;
+}
 
 .left_page {
 	width: 50vw;
@@ -75,8 +87,30 @@ html {
 
 	font-size: 80px;
 	left: 5vw;
+
+
+}
+
+.splash_title {
+	
 	margin-top: -1vh;
 
+	animation: title_intro 1s;
+
+}
+
+
+@keyframes title_intro {
+	0%{ 
+		opacity: 0;
+		margin-top:-4vh;
+
+	};
+	100% {
+		opacity: 1;
+		margin-top: -1vh;
+
+	};
 }
 
 .bio{
@@ -214,6 +248,8 @@ html {
 
 	transition: opacity .3s, top .3s, color .3s;
 	-webkit-transition: opacity .3s, top .3s, color .3s;
+
+	
 
 }	
 
