--- a/stylesheet.css
+++ b/stylesheet.css
@@ -209,7 +209,6 @@ html {
 	text-align: center;
 }
 .alphabet_letter {
-
 	font-family: "font", sans-serif;
 	color: #D1E8E2;
 	font-size: 160%;
@@ -235,7 +234,11 @@ html {
 	background-color: #4C5551;
 	border: 2px solid #D1E8E2;
 	border-radius: 5px;
-
+	transition: border .5s, background-color .5s;
+}
+.selected_square {
+	border: 3px solid #F1F8F2;
+	background-color: #5C6561;
 }
 .menu-button, .menu-button:visited, .menu-button:active {
 	color:#D1E8E2;
