--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,8 +26,20 @@ html {
 	margin-top: -5vw;
 	margin-left: -1vw;
 	position: fixed;
-	animation: zindex 2s;
+	-webkit-animation: zindex 2s;
+	        animation: zindex 2s;
 	/*makes the buttons appear after the intro*/
+}
+@-webkit-keyframes zindex {
+	0% {
+		opacity: 0%;
+	}
+	30% {
+		opacity:0%;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 @keyframes zindex {
 	0% {
@@ -49,11 +61,14 @@ html {
 	margin-top: 5vw;
 	position: absolute;
 	margin-left: 5vw;
+	-webkit-transition: opacity .5s, margin-left .5s;
+	-o-transition: opacity .5s, margin-left .5s;
 	transition: opacity .5s, margin-left .5s;
 }
 .button-image {
 	max-height: 3vh;
-	filter: invert();
+	-webkit-filter: invert();
+	        filter: invert();
 }
 .left_page {
 	width: 100vw;
@@ -63,8 +78,11 @@ html {
 	top: 15vh;
 	margin-left: 0vw;
 	position: absolute;
+	-webkit-transition: margin-left .75s;
+	-o-transition: margin-left .75s;
 	transition: margin-left .75s;;
-	animation: title_intro 2s;
+	-webkit-animation: title_intro 2s;;
+	        animation: title_intro 2s;
 	background-color: #2C3531;
 }
 .splash {
@@ -75,6 +93,14 @@ html {
 }
 .splash_title {
 	margin-top: -1vh;
+}
+@-webkit-keyframes title_intro {
+	0%{
+		opacity:0;
+	};
+	100% {
+		opacity: 1;
+	};
 }
 @keyframes title_intro {
 	0%{
@@ -94,17 +120,17 @@ html {
 .portfolio {
 	text-align: center;
 	display: -webkit-box;
-    display: -moz-box;
     display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	z-index: -2;
 	margin-top: 5vh;
+	-webkit-transition: opacity .3s;
+	-o-transition: opacity .3s;
 	transition: opacity .3s;
 	-webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
 }
@@ -119,19 +145,29 @@ html {
 	font-size: 160%;
 	color: #D1E8E2;
 	text-decoration: none;
+	-webkit-transition: opacity 0.5s;
+	-o-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 }
 .list-item {
 	cursor: pointer;
 	text-align:center;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
 	width: fit-content;
 	white-space: nowrap;
 	text-decoration: none;
 	margin-left: 0vw;
+	-webkit-transition: margin-left 1s, -webkit-transform 0.2s;
+	transition: margin-left 1s, -webkit-transform 0.2s;
+	-o-transition: margin-left 1s, transform 0.2s;
 	transition: margin-left 1s, transform 0.2s;
+	transition: margin-left 1s, transform 0.2s, -webkit-transform 0.2s;
 }
 .list-item:hover{
-	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	    -ms-transform: scale(1.1);
+	        transform: scale(1.1);
 }
 .list-item:hover div{
 	max-width: 50vw;
@@ -150,6 +186,8 @@ html {
 	word-wrap:normal;
 	margin-top: 1vh;
 	text-decoration: none;
+	-webkit-transition: opacity 0.5s;
+	-o-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 }
 .no-format{
@@ -163,11 +201,15 @@ html {
 	margin-top: 0.5vh;
 	text-align: left;
 	display: inline-block;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
 	width: fit-content;
 	max-width: 0vw;
 	overflow:hidden;
 	white-space: nowrap;
 	position: absolute;
+	-webkit-transition: max-width 1s;
+	-o-transition: max-width 1s;
 	transition: max-width 1s;
 }
 .language {
@@ -185,10 +227,19 @@ html {
 	top: 10vh;
 	height: 80vh;
 	position: relative;
+	-webkit-transition: margin-left .75s;
+	-o-transition: margin-left .75s;
 	transition: margin-left .75s;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .right_page img {
 	width: 40vw;
@@ -197,13 +248,17 @@ html {
 	opacity: 0;
 }
 .alphabet {
-	user-select: none;
+	-moz-user-select: none;
+	 -ms-user-select: none;
+	     user-select: none;
 	-webkit-user-select: none;
 	cursor: pointer;
 	font-family: "font", sans-serif;
 	color: #D1E8E2;
 	font-size: 160%;
 	margin-top: 5vh;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
 	height: fit-content;
 	width: 30vw;
 	text-align: center;
@@ -212,16 +267,22 @@ html {
 	font-family: "font", sans-serif;
 	color: #D1E8E2;
 	font-size: 160%;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
 	height: fit-content;
 	display: inline-block;
 	margin-right: 1vw;
 }
 .guesses {
 	margin-top: 5vh;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
 	height: fit-content;
 	font-family: "font", sans-serif;
 	color: #D1E8E2;
 	font-size: 160%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 .square {
@@ -234,6 +295,8 @@ html {
 	background-color: #4C5551;
 	border: 2px solid #D1E8E2;
 	border-radius: 5px;
+	-webkit-transition: border .5s, background-color .5s;
+	-o-transition: border .5s, background-color .5s;
 	transition: border .5s, background-color .5s;
 }
 .selected_square {
@@ -256,6 +319,7 @@ html {
 	overflow:hidden;
 	white-space:normal;
 	position:relative;
+	-o-transition: opacity .3s, top .3s, color .3s;
 	transition: opacity .3s, top .3s, color .3s;
 	-webkit-transition: opacity .3s, top .3s, color .3s;
 }
@@ -269,6 +333,8 @@ html {
 	position: absolute;
 	text-align: center;
 	opacity: 0;
+	-webkit-transition: opacity .75s;
+	-o-transition: opacity .75s;
 	transition: opacity .75s;
 }
 @media only screen and (max-aspect-ratio: 1/1) {
